[project]
authors = [{name = "pablovela5620", email = "pablovela5620@gmail.com"}]
dependencies = []
description = "Add a short description here"
name = "simplevo"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
simplevo = { path = ".", editable = true }

[tool.pixi.tasks]
